# LSIMLAUNCHER

./: CMakeLists.txt  README.md
include/: fileIO.h  gui.h
projectFiles/: CMakeLists.txt
projectFiles/config/: config.json
projectFiles/shaders/: default.frag  default.geom  default.vert  instance.frag  instance.vert  skybox.frag  skybox.vert
settings/: settings.ini
src/: fileIO.cpp  gui.cpp  main.cpp
